TRACK_2/es_bonus_track/es_bonus_deploy_apache/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: webserver-apache

spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - port: 443
      targetPort: 443
