TRACK_2/es_bonus_track/es_bonus_deploy_apache/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: apache-ingress
  namespace: webserver-apache
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - apache.webserver
      secretName: apache-tls
  rules:
  - host: apache.webserver
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: apache-service
              port:
                number: 443
